--- a/main.html
+++ b/main.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<ol>
+		<li>data-ns-test="shoppingList">Bike</li>
+		<li>data-ns-test="shoppingList">Car</li>
+		<li>data-ns-test="shoppingList">House</li>
+	</ol>
+	<ul>
+		<li>data-ns-test="holidayList">Egypt</li>
+		<li>data-ns-test="holidayList">Paris</li>
+		<li>data-ns-test="holidayList">Europe</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
